--- a/index.html
+++ b/index.html
@@ -6,34 +6,29 @@
 	<title>Document</title>
 </head>
 <body>
-<!-- <script src='./index.js'> -->
-<!-- <script src="./confirm.js"></script> -->
- <!-- <script src="./prompt.js"></script> -->
- <script>
-	   var a;
-		 console.log(a)
-		let b = Symbol('b')
-		let c = Symbol('b')
-		console.log(b==c)
-		 var students = new Array()
-     students[0] ='学生1'
-     students[1] ='学生2'
-		 console.log(students)
-		 var students1 = ['学生1','学生2','学生3' ]
-		 console.log(students1)
-		 //定义了一辆车 
-		 var car  ={
-			 color:'红色',
-			 price:10000,
-			 age: 10
-			}
-			//定义一个人
-			var  person = {
-				age:20,
-				hobby:'music',
-				heiget:172,
-				sex:'男'
-			}
- </script>
+	<div>
+		<div>
+			<ul>
+				<li>
+					<a href=""></a>
+				</li>
+				<li></li>
+				<li></li>
+				<li></li>
+				<li></li>
+				<li></li>
+			</ul>
+		</div>
+		<div>
+			<ul>
+				<li></li>
+				<li></li>
+				<li></li>
+				<li></li>
+				<li></li>
+				<li></li>
+			</ul>
+		</div>
+	</div>
 </body>
 </html>
